--- a/app/design/frontend/Satoshi/Hyva/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
@@ -1,5 +1,4 @@
 <?php
-
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
@@ -38,9 +37,7 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
         }
     }
 </script>
-<div class="flex"
-     x-data="initAllowShippingAssistence()"
->
+<div class="flex" x-data="initAllowShippingAssistence()">
     <label class="flex items-center gap-x-3 mx-4"
            for="assistance_allowed_checkbox"
            x-data="initAllowShippingAssistence()"
@@ -67,37 +64,33 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
     <input type="hidden"
            name="assistance_allowed"
            x-ref="assistance-input"
-           value="<?= (int) $shoppingAssistanceViewModel->isAssistanceAllowed() + 1 ?>"
+           value="<?= (int)$shoppingAssistanceViewModel->isAssistanceAllowed() + 1 ?>"
     />
 
     <div class="inline-flex">
-        <button
-            type="button"
-            @mouseover.prevent.stop="showTooltip = true"
-            @mouseleave.prevent.stop="showTooltip = false"
-            @focus="showTooltip = true"
-            @focusout="showTooltip = false"
-            @keydown.escape="showTooltip = false"
-            aria-labelledby="assistance_allowed_checkbox_tooltip"
-            aria-disabled="true"
-            class="text-primary-500 h-full w-full"
+        <button type="button"
+                @mouseover.prevent.stop="showTooltip = true"
+                @mouseleave.prevent.stop="showTooltip = false"
+                @focus="showTooltip = true"
+                @focusout="showTooltip = false"
+                @keydown.escape="showTooltip = false"
+                aria-labelledby="assistance_allowed_checkbox_tooltip"
+                aria-disabled="true"
+                class="text-primary-500 h-full w-full"
         >
             <?= $hyvaicons->renderHtml('info') ?>
         </button>
         <div class="relative" x-cloak x-show="showTooltip">
             <div class="shadow-lg">
-                <div class="absolute top-0 left-0 z-10 w-64 p-2 -mt-6 text-sm leading-tight text-black transform
+                <div class="absolute top-0 left-0 z-10 w-64 -mt-6 text-sm leading-tight text-black transform
                     -translate-x-full md:-translate-x-1/3 -translate-y-full bg-bg-400 rounded-lg shadow-lg p-4">
-                    <span
-                        class="subtitle text-base"
-                        id="assistance_allowed_checkbox_tooltip"
-                    >
+                    <span class="subtitle text-base" id="assistance_allowed_checkbox_tooltip">
                         <?= $escaper->escapeHtml(__($shoppingAssistanceViewModel->getAssistanceCheckboxTooltip())) ?>
                     </span>
                 </div>
                 <svg class="absolute z-10 w-8 h-8 text-white transform -translate-x-full
                     -translate-y-8 fill-current stroke-current" width="12" height="12" aria-hidden="true">
-                    <rect x="12" y="-12" width="12" height="12" transform="rotate(45)" class="shadow-xl" />
+                    <rect x="12" y="-12" width="12" height="12" transform="rotate(45)" class="shadow-xl"/>
                 </svg>
             </div>
         </div>
