--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -1,2 +1,3 @@
 @import "content-type/_guarantees.style.less";
 @import "content-type/_image-with-text.style.less";
+@import "content-type/_image-banner.style.less";
