--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
@@ -7,10 +7,10 @@ use Magento\Framework\View\Element\Template;
 /** @var Template $block */
 
 ?>
-<article class="content-wrapper mx-auto">
+<article>
   <?php if($block->getLayout()->getBlock('page.main.title')): ?>
     <h1
-      class="mb-7 text-center text-4xl text-text-500"
+      class="content-wrapper mx-auto mb-7 text-center text-4xl text-text-500"
       itemprop="headline"
     >
       <?= $block->getLayout()->getBlock('page.main.title')->getPageTitle() ?>
