INTERNAL-337: Remove querySelector sidebar logic Implement this logic with alpine js and scss classes

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
@@ -34,7 +34,9 @@ $breadcrumbs = $catalogData->getBreadcrumbPath();
     <?= $block->getToolbarHtml() ?>
     <?= $block->getAdditionalHtml() ?>
 
-    <div class="flex md:items-start">
+    <div class="flex md:items-start"
+         :class="!$store.productList.isFiltersSidebarExpanded && 'expanded'"
+    >
         <div class="flex-grow">
             <div
                 data-content-wrapper
