--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
@@ -7,20 +7,27 @@
             <block class="Magento\Framework\View\Element\Template" name="product-grid-container" template="Magento_Catalog::category/grid-container.phtml" after="category.banner" />
         </referenceContainer>
 
-        <referenceContainer name="div.sidebar.additional" htmlClass="sidebar sidebar-additional md:mt-8"/>
-
-        <referenceContainer name="columns" htmlClass="grid-columns overflow-hidden md:flex md:flex-row md:gap-8"/>
-
-        <referenceContainer name="main"
-                            htmlClass="plp-main-content flex-shrink-0 md:w-plp-main transition-width duration-300 row-span-2 col-span-3 only:col-span-full"/>
-
-        <move element="div.sidebar.additional" destination="sidebar.main" after="catalog.navigation.renderer"/>
         <move element="preview.content" destination="product-grid-container"/>
-        <move element="main" destination="columns" before="-" />
         <move element="page.main.title" destination="category.banner" />
 
         <referenceBlock name="category.description" remove="true" />
         <referenceBlock name="category.image" remove="true" />
         <referenceBlock name="category.cms" remove="true" />
+
+        <!-- Implement flex for PLP columns to make sidebar hide work -->
+        <referenceContainer name="columns" htmlClass="overflow-hidden md:flex md:flex-row md:gap-8"/>
+
+        <!-- Set the main content transition and dynamic class plp-main-content -->
+        <referenceContainer name="main"
+                            htmlClass="plp-main-content md:w-full transition-width duration-300 row-span-2 col-span-3 only:col-span-full"/>
+
+        <referenceContainer name="div.sidebar.additional" htmlClass="sidebar sidebar-additional md:mt-8"/>
+
+        <!-- Implement container for sidebars on PLP -->
+        <container name="div.sidebar" htmlTag="div"/>
+        <move element="div.sidebar.main" destination="div.sidebar" after="-"/>
+        <move element="div.sidebar.additional" destination="div.sidebar" after="div.sidebar.main"/>
+        <move element="div.sidebar" destination="columns" after="main"/>
+
     </body>
 </page>
