--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_result_index.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_result_index.xml
@@ -7,16 +7,22 @@
             <block class="Magento\Framework\View\Element\Template" name="product-grid-container" template="Magento_Catalog::category/grid-container.phtml" after="search.banner" />
         </referenceContainer>
 
+        <move element="preview.content" destination="product-grid-container"/>
+        <move element="page.main.title" destination="search.banner"/>
+
+        <!-- Implement flex for search results page columns to make sidebar hide work -->
+        <referenceContainer name="columns" htmlClass="overflow-hidden md:flex md:flex-row md:gap-8"/>
+
+        <!-- Set the main content transition and dynamic class plp-main-content -->
+        <referenceContainer name="main"
+                            htmlClass="plp-main-content md:w-full transition-width duration-300 row-span-2 col-span-3 only:col-span-full"/>
+
         <referenceContainer name="div.sidebar.additional" htmlClass="sidebar sidebar-additional md:mt-8"/>
 
-        <referenceContainer name="columns" htmlClass="grid-columns overflow-hidden md:flex md:flex-row md:gap-8"/>
-
-        <referenceContainer name="main"
-                            htmlClass="search-main-content flex-shrink-0 md:w-plp-main transition-width duration-300 row-span-2 col-span-3 only:col-span-full"/>
-
-        <move element="div.sidebar.additional" destination="sidebar.main" after="catalog.navigation.renderer"/>
-        <move element="preview.content" destination="product-grid-container"/>
-        <move element="main" destination="columns" before="-" />
-        <move element="page.main.title" destination="search.banner" />
+        <!-- Implement container for sidebars on search results page -->
+        <container name="div.sidebar" htmlTag="div"/>
+        <move element="div.sidebar.main" destination="div.sidebar" after="-"/>
+        <move element="div.sidebar.additional" destination="div.sidebar" after="div.sidebar.main"/>
+        <move element="div.sidebar" destination="columns" after="main"/>
     </body>
 </page>
