--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/search/banner.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/search/banner.phtml
@@ -18,33 +18,16 @@ $title = $block->getLayout()->getBlock('page.main.title')->getPageHeading();
 
 ?>
 <article
-  class="content-wrapper mx-auto flex flex-col items-start gap-3 py-5 pb-6 pt-3"
-  aria-label="<?= __('Search details') ?>"
+    class="content-wrapper mx-auto flex flex-col items-start gap-3 py-5 pb-6 pt-3"
+    aria-label="<?= __('Search details') ?>"
 >
-  <div class="flex w-full items-end justify-between">
-    <h2 class="text-lg"><?= $escaper->escapeHtml((string)$title) ?></h2>
+    <div class="flex w-full items-end justify-between">
+        <h2 class="text-lg"><?= $escaper->escapeHtml((string)$title) ?></h2>
 
-    <!-- Uncomment when hide filters button moved inside sidebar -->
-    <!-- <div
-      class="button button--filled-primary invisible ml-8 hidden w-[275px] min-w-[275px] md:inline-flex md:pl-2"
-    ></div> -->
-    <!-- TODO: Move inside filters sidebar -->
-    <div class="ml-8 md:pl-2">
-      <button
-        type="button"
-        id="sidebar-button"
-        class="button button--filled-primary hidden w-[275px] min-w-[275px] md:inline-flex"
-        @click="$store.productList.toggleFiltersSidebar()"
-      >
-        <span
-          x-text="$store.productList.isFiltersSidebarExpanded ? '<?= __('Hide filter') ?>' : '<?= __('Show filter') ?>'"
-        >
-          <?= __('Hide filter') ?>
-        </span>
-        <span class="button__icon ml-3 text-xl">
-          <?= $hyvaicons->renderHtml('filter'); ?>
-        </span>
-      </button>
+        <!-- Uncomment when hide filters button moved inside sidebar -->
+        <!-- <div
+          class="button button--filled-primary invisible ml-8 hidden w-[275px] min-w-[275px] md:inline-flex md:pl-2"
+        ></div> -->
+        <?= $this->getChildHtml('filterButton'); ?>
     </div>
-  </div>
 </article>
