--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_result_index_noresults.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_result_index_noresults.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column"
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-right"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="catalogsearch.leftnav" remove="true" />
         <referenceBlock name="filter-button" remove="true" />
+        <referenceContainer name="columns" htmlClass="grid-columns"/>
     </body>
 </page>
