--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -25,6 +25,7 @@ $productOptionsViewmodel = $viewModels->require(ProductOptionsData::class);
 $product = $block->getData('product');
 $imageUrl = $this->helper(Image::class)->init($product, 'product_page_image_medium')
                  ->getUrl();
+$placeholderImageUrl = $this->helper(Image::class)->getDefaultPlaceholderUrl('image');
 $breadcrumbs = $block->getData('breadcrumbs') ?? [];
 
 // Calculating is large
@@ -129,19 +130,17 @@ if ($product) {
                     <?php endif ?>
 
                 <?php else: ?>
-                    <template x-if="product.media_gallery?.[0]?.url">
-                        <div
-                            class="flex aspect-product h-full w-full items-center justify-center <?= $isContain ? 'p-[4%]' : '' ?> bg-[--fade-in-bg] transition-transform  md:group-hover:scale-105">
-                            <img
-                                :src="product.media_gallery?.[0]?.url || '<?= $escaper->escapeUrl($imageUrl) ?>'"
-                                :alt="product.image?.label"
-                                class="<?= $isContain ? 'object-contain rounded-md' : 'object-cover h-full w-full' ?> max-h-full object-center mix-blend-darken"
-                                loading="lazy"
-                                width=""
-                                height=""
-                            />
-                        </div>
-                    </template>
+                    <div
+                        class="flex aspect-product h-full w-full items-center justify-center <?= $isContain ? 'p-[4%]' : '' ?> bg-[--fade-in-bg] transition-transform  md:group-hover:scale-105">
+                        <img
+                            :src="product.media_gallery?.[0]?.url || '<?= $escaper->escapeUrl($placeholderImageUrl) ?>'"
+                            :alt="product.image?.label"
+                            class="<?= $isContain ? 'object-contain rounded-md' : 'object-cover h-full w-full' ?> max-h-full object-center mix-blend-darken"
+                            loading="lazy"
+                            width=""
+                            height=""
+                        />
+                    </div>
                 <?php endif ?>
                 <?= $template->setData(['product' => $product, 'class' => 'py-1 bottom left', 'is_search' => $isSearch])->render('Magento_Catalog::product/list/discount-badge.phtml') ?>
             </div>
