INTERNAL-349; make reorder a recent order without page reloads

--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -81,7 +81,10 @@ if (! $customer->customerLoggedIn()) {
         <template x-if="isShowAddToCart">
             <button
                 type="button"
-                @click.prevent="addToCart('<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>')"
+                @click.prevent="async () => { 
+                    await addToCart('<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>'); 
+                    $store.cart.showCart(); 
+                }"
                 class="button button--filled-primary max-md:w-full"
                 aria-label="<?= $escaper->escapeHtmlAttr(__('Add to cart selected products from list')) ?>"
                 data-addto="cart"
