--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -81,10 +81,7 @@ if (! $customer->customerLoggedIn()) {
         <template x-if="isShowAddToCart">
             <button
                 type="button"
-                @click.prevent="async () => { 
-                    await addToCart('<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>'); 
-                    $store.cart.showCart(); 
-                }"
+                @click.prevent="addToCart('<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>')"
                 class="button button--filled-primary max-md:w-full"
                 :class="isLoading && 'button--disabled'"
                 :disabled="isLoading"
