INTERNAL-349; fix item and recent order block not showing

--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -26,6 +26,7 @@ if (! $customer->customerLoggedIn()) {
     class="hidden mb-7"
     :class="{ 'hidden': !itemCount }"
     :aria-hidden="!itemCount"
+    id="recent-orders-sidebar"
 >
     <div class="bg-bg-400 rounded-md mt-5">
         <h2 class="text-text-500 text-lg font-bold p-4" id="block-reorder-heading">
