--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/sharing.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/sharing.phtml
@@ -29,14 +29,15 @@ $errorMessage = $block->getErrorMessage();
         <?= $escaper->escapeHtml(__('Sharing Information')) ?>
     </h2>
 
-    <div class="field field-reserved" :class="{ 'field-error': !isValid }">
-        <label class="sr-only tracking-widest" for="email_address">
-            <span><?= $escaper->escapeHtml(__('Email addresses, separated by commas')) ?></span>
-        </label>
-        <div>
+    <div class="flex flex-col gap-3">
+        <div class="field field-reserved" :class="{ 'field-error': !isValid }">
+            <label class="sr-only tracking-widest" for="email_address">
+                <span><?= $escaper->escapeHtml(__('Email addresses, separated by commas')) ?></span>
+            </label>
+            <div>
             <textarea id="email_address"
                       name="emails"
-                      class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5 w-full"
+                      class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5 w-full block"
                       rows="2"
                       placeholder="<?= $escaper->escapeHtml(__('Email addresses, separated by commas')) ?>"
                       @blur="validateForm()"
@@ -45,36 +46,39 @@ $errorMessage = $block->getErrorMessage();
                       required
             ><?= /* @noEscape */
                 $block->getEnteredData('emails') ?></textarea>
-        </div>
-        <?php if ($errorMessage['emails'] ?? false): ?>
-            <div class="messages mt-1">
-                <span><?= $escaper->escapeHtml($errorMessage['emails']) ?></span>
+                <?php if ($errorMessage['emails'] ?? false): ?>
+                    <div class="field-error mt-1">
+                        <span class="messages"><?= $escaper->escapeHtml($errorMessage['emails']) ?></span>
+                    </div>
+                <?php endif; ?>
             </div>
-        <?php endif; ?>
-    </div>
+        </div>
 
-    <div class="field field-reserved">
-        <label class="sr-only tracking-widest" for="message">
-            <span><?= $escaper->escapeHtml(__('Message')) ?></span>
-        </label>
-        <div>
+        <div class="field field-reserved">
+            <label class="sr-only tracking-widest" for="message">
+                <span><?= $escaper->escapeHtml(__('Message')) ?></span>
+            </label>
+            <div>
             <textarea id="message"
                       name="message"
-                      class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5 w-full"
+                      class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5 w-full block"
                       rows="5"
                       maxlength="<?= (int)$block->getTextSharingLimit() ?>"
                       placeholder="<?= $escaper->escapeHtml(__('Message')) ?>"
             ><?= /* @noEscape */
                 $block->getEnteredData('message') ?></textarea>
+            </div>
+        </div>
+
+        <div>
+            <?= $block->getChildHtml('captcha'); ?>
+            <?php if ($errorMessage['captcha'] ?? false): ?>
+                <div class="field-error mt-1">
+                    <span class="messages"><?= $escaper->escapeHtml($errorMessage['captcha']) ?></span>
+                </div>
+            <?php endif; ?>
         </div>
     </div>
-
-    <?= $block->getChildHtml('captcha'); ?>
-    <?php if ($errorMessage['captcha'] ?? false): ?>
-        <div class="field-error mt-1">
-            <span class="messages"><?= $escaper->escapeHtml($errorMessage['captcha']) ?></span>
-        </div>
-    <?php endif; ?>
 
     <div class="flex gap-x-4 flex-col md:flex-row mt-5">
         <button type="submit"
