--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/button/share.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/button/share.phtml
@@ -16,9 +16,9 @@ use Magento\Wishlist\Block\Customer\Wishlist\Button;
             class="button button--outline-primary"
             :class="isLoading && 'button--disabled'"
             :disabled="isLoading"
-            @click='setBtnText("share-wishlist")'
+            @click='setActionBtnText("share-wish-list")'
     >
-        <span x-text="isLoading && btnText === 'share-wishlist' ?
+        <span x-text="isLoading && actionBtnText === 'share-wish-list' ?
             '<?= $escaper->escapeHtml(__('Sharing...')) ?>' :
             '<?= $escaper->escapeHtml(__('Share Wish List')) ?>'">
             <?= $escaper->escapeHtml(__('Share Wish List')) ?>
