--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/button/tocart.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/button/tocart.phtml
@@ -10,14 +10,14 @@ use Magento\Wishlist\Block\Customer\Wishlist\Button;
 
 <?php if ($block->getWishlist()->getItemsCount() && $block->getWishlist()->isSalable()): ?>
     <button type="button"
-            @click.prevent='setBtnText("add-all-to-cart"); addAllItemsToCart()'
+            @click.prevent='setActionBtnText("add-all-to-cart"); addAllItemsToCart()'
             data-role="all-tocart"
             title="<?= $escaper->escapeHtmlAttr(__('Add All to Cart')) ?>"
             class="button button--filled-primary"
             :class="isLoading ? 'button--disabled' : ''"
             :disabled="isLoading"
     >
-        <span x-text="isLoading && btnText === 'add-all-to-cart' ?
+        <span x-text="isLoading && actionBtnText === 'add-all-to-cart' ?
             '<?= $escaper->escapeHtml(__('Adding...')) ?>' :
             '<?= $escaper->escapeHtml(__('Add All to Cart')) ?>'">
             <?= $escaper->escapeHtml(__('Add All to Cart')) ?>
