--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/view.phtml
@@ -3,7 +3,7 @@
 declare(strict_types=1);
 
 use Magento\Framework\Escaper;
-use Magento\Wishlist\Block\Customer\Wishlist;
+use Satoshi\Theme\Block\Customer\Wishlist;
 use Magento\Wishlist\Helper\Data as WishlistHelper;
 
 // phpcs:disable Magento2.Templates.ThisInTemplate.FoundThis
@@ -13,13 +13,14 @@ use Magento\Wishlist\Helper\Data as WishlistHelper;
 /** @var Wishlist $block */
 
 $wishlistHelper = $this->helper(WishlistHelper::class);
+$successMessage = $block->getSuccessMessage();
+$errorMessage = $block->getErrorMessage();
 ?>
 
 <?php if ($wishlistHelper->isAllow()): ?>
     <div class="toolbar wishlist-toolbar"><?= $block->getChildHtml('wishlist_item_pager'); ?></div>
     <?= ($block->getChildHtml('wishlist.rss.link')) ?>
-    <form class="form-wishlist-items mt-4"
-          id="wishlist-view-form"
+    <form id="wishlist-view-form"
           x-data="MyWishList(
               <?= $escaper->escapeHtmlAttr($block->getAddAllToCartParams()) ?>
           )"
@@ -33,6 +34,16 @@ $wishlistHelper = $this->helper(WishlistHelper::class);
           method="post"
           @submit.prevent="updateWishList(event)"
     >
+        <?php if ($successMessage): ?>
+            <div class="text-green-700 mb-3">
+                <span><?= $successMessage; ?></span>
+            </div>
+        <?php elseif ($errorMessage): ?>
+            <div class="field-error mb-3">
+                <span class="messages"><?= $escaper->escapeHtml($errorMessage); ?></span>
+            </div>
+        <?php endif; ?>
+
         <?= $block->getChildHtml('top') ?>
         <?php if ($block->hasWishlistItems()): ?>
             <?= $block->getBlockHtml('formkey') ?>
